ajuste de selecao de cliente

--- a/public/home.html
+++ b/public/home.html
@@ -32,6 +32,8 @@
             <a class="navbar-brand" href="#/home">Sistema de Abastecimento</a>
         </div>
 
+        <img src="stylesheets/img/logo_fenatral.png" alt="" style="float: right;width: 240px;">
+
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
