--- a/public/home.html
+++ b/public/home.html
@@ -42,7 +42,7 @@
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">Consultas <b class="caret"></b></a>
                     <ul class="dropdown-menu">
-                        <li><a href="#/search_usuario">Usuario</a>
+                        <li><a href="#/search-usuario">Usuario</a>
                         </li>
                         <li><a href="#/home">Cliente</a>
                         </li>
