AJUSTE NA  TELA E CADASTRO DE VEICULO

--- a/public/home.html
+++ b/public/home.html
@@ -12,6 +12,8 @@
     <link href="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet">
     <link href="stylesheets/style.css" rel="stylesheet">
 
+    <link href="stylesheets/vendors/typeahead.css" rel="stylesheet">
+
     <script type="text/javascript" src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
     <script src="javascripts/vendors/bootstrap.min.js" type="text/javascripts"></script>
 
@@ -19,6 +21,8 @@
     <script type="text/javascript" src="javascripts/vendors/angular/angular-resource.min.js"></script>
 
     <script type="text/javascript" src="javascripts/vendors/bootstrap.min.js"></script>
+    <script type="text/javascript" src="javascripts/vendors/typeahead.min.js"></script>
+    <script type="text/javascript" src="javascripts/vendors/hogan-2.0.0.js"></script>    
     <script type="text/javascript" src="javascripts/app/routes.js"></script>
     <script type="text/javascript" src="javascripts/app/controllers.js"></script>
     <script type="text/javascript" src="javascripts/app/resources.js"></script>
